k8s/helloworld/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: helloworld
  name: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - image: 960049661466.dkr.ecr.eu-west-1.amazonaws.com/brightside/helloworld:2.0-x86
        name: helloworld
