k8s/helloworld/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
     app: helloworld
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/port: "5005"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5005
      protocol: TCP
      name: http
  selector:
    app: helloworld
